test/link/linkerscript-escapes-test.out
error: linkerscript-escapes-test.link(4): Cannot escape character '{'
Linking failed with 1 error
